<resources>
    <string name="app_name">Sesion5</string>
    <string name="activity_main_guardar">Guardar</string>
    <string name="activity_main_limpiar">Limpiar</string>
    <string name="activity_main_deporte">Practica Deporte</string>
    <!--opcines de escolaridad-->
    <string-array name="activity_main_opciones">
        <item>Bachillerato</item>
        <item>Técnico</item>
        <item>Licenciatura</item>
        <item>Maestría</item>
        <item>Doctorado</item>
    </string-array>
    <!--opcines de libros-->
    <string-array name="activity_main_libros">
        <item name="hairy potter">hairy potter</item>
        <item name="narnia">narnia</item>
        <item name="hamlet">hamlet</item>
        <item name="othelo">othelo</item>
        <item name="bible">bible</item>
    </string-array>

    <string name="activity_main_escolaridad">Escolaridad</string>
    <string name="activity_main_h_nombre">Ingrese su Nombre</string>
    <string name="activity_main_h_telefono">Ingrese su Telefono</string>
    <string name="activity_main_genero">Genero</string>
    <string name="activity_main_femenino">Femenino</string>
    <string name="activity_main_masculino">Masculino</string>
    <string name="activity_main_libro">Libro Favorito</string>
</resources>
